# Script-Editor

./: .gitignore  CMakeLists.txt
include/: customtextedit.h  scripteditor.h
src/: customtextedit.cpp  main.cpp  scripteditor.cpp  scripteditor.cpp.autosave
